# cellframe-sdk

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  ARCHITECTURE.md  CMakeLists.txt  CMakeLists.txt.bak  CMakePresets.json  CYCLE_ANALYSIS.md  Changelog  LEDGER_DEPENDENCY_ANALYSIS.json  PHASE_5_4_CYCLE_ANALYSIS.json  PHASE_5_4_FINAL_ANALYSIS.md  PHASE_5_4_OBJECT_MIGRATION.md  PHASE_5_4_STATUS.md  PHASE_5_4_SUCCESS.md  PHASE_5_5_DECREE_API_REGISTRY.md  PHASE_5_5_FINAL_REPORT.md  PHASE_5_BUILD_SUCCESS.md  PHASE_5_COMPLETION_REPORT.md  README.md  REFACTORING_STATUS.md  UTXO_CLI_COVERAGE_ANALYSIS.md  advanced_auto_fixer.py  advanced_type_fixer.py  auto_fix.sed  auto_fix_script.py  category_fixer.py  cellframe-sdk.c  cellframe-sdk.h  cellframe-sdk.pc.in  cellframe-sdk.pro  client_mempool.c  client_mempool.h  commit_msg.txt  conservative_fixer.py  crypto.pri  dap-sdk  dap_chain.c  dap_chain.h  (+270 more)
auth/: CMakeLists.txt  db_auth.c  db_auth.h  enc_http.c  enc_http.h  enc_ks.c  enc_ks.h
client/: CMakeLists.txt  dap_client.c  dap_client.h  dap_client_internal.c  dap_client_internal.h  dap_client_remote.c  dap_client_remote.h  dap_common.c  dap_common.h
core/: CMakeLists.txt  common.c  common.h  config.c  config.h  core.pri  dap_circular_buffer.c  dap_circular_buffer.h  dap_client.c  dap_client.h  dap_common.c  dap_common.h  dap_config.c  dap_config.h  dap_file_utils.c  dap_file_utils.h  dap_list.c  dap_list.h  dap_math_ops.h  dap_module.h  dap_process_manager.c  dap_process_manager.h  dap_server.c  dap_server.h  dap_strfuncs.c  dap_strfuncs.h  dap_string.c  dap_string.h  file_utils.c  file_utils.h
core/common/: memwipe.h
core/unix/: CMakeLists.txt  dap_cpu_monitor.c  dap_cpu_monitor.h  dap_network_monitor.c  dap_network_monitor.h  dap_process_manager.c  dap_process_manager.h  dap_process_memory.c  dap_process_memory.h  unix.pri
core_server/: CMakeLists.txt  dap_server.c  dap_server.h
core_server/client/: (DELETE)CMakeLists.txt  client.pri  dap_client.c  dap_client_internal.c  dap_client_internal.h  dap_client_remote.c  dap_client_remote.h
core_server/dap_client/: dap_client.h  dap_client_remote.c
crypt/: CMakeLists.txt  dap_enc.c  dap_enc.h  dap_enc_aes.c  dap_enc_aes.h  dap_enc_base64.c  dap_enc_base64.h  dap_enc_key.c  dap_enc_key.h  dap_enc_newhope.h  dap_hash.c  dap_hash.h  dap_hash_fusion.c  dap_hash_fusion.h  enc.c  enc.h  enc_fnam2.c  enc_fnam2.h  enc_key.c  enc_key.h  test.c
crypt/liboqs/: config.h
crypt/monero_crypto/: CMakeLists.txt  warnings.h
crypto/: CMakeLists.txt  crypto.pri  dap_crypto_common.h  dap_enc.c  dap_enc.h  dap_enc_aes.c  dap_enc_aes.h  dap_enc_base58.c  dap_enc_base58.h  dap_enc_base64.c  dap_enc_base64.h  dap_enc_bliss.c  dap_enc_bliss.h  dap_enc_ca.h  dap_enc_defeo.c  dap_enc_defeo.h  dap_enc_iaes.c  dap_enc_iaes.h  dap_enc_key.c  dap_enc_key.h  dap_enc_msrln.c  dap_enc_msrln.h  dap_enc_msrln16.c  dap_enc_msrln16.h  dap_enc_newhope.c  dap_enc_newhope.h  dap_enc_oaes.c  dap_enc_picnic.c  dap_enc_picnic.h  dap_enc_sidh16.c  dap_enc_sidh16.h  dap_enc_tesla.c  dap_enc_tesla.h  test.c
crypto/DeFeo_Scheme/: P768_internal.h  defeo_kex.c
crypto/IAES/: dap_iaes_proto.h  iaes256_cbc_cernal.c  test_AES256.c
crypto/MSRLN/: MSRLN.h  MSRLN_priv.h  kex.c  ntt_constants.c  random.c
crypto/defeo_scheme/: config.h  defeo.pri  defeo_P768_internal.h  defeo_config.h  defeo_kex.c
crypto/iaes/: dap_iaes_proto.h  iaes.pri  iaes256_cbc_cernal.c  tables.h
crypto/liboqs/: CMakeLists.txt
crypto/msrln/: kex.c  msrln.h  msrln_priv.h
crypto/oaes/: oaes.pri  oaes_lib.c  oaes_lib.h
crypto/rand/: dap_rand.c  dap_rand.h
crypto/sha3/: fips202.c  fips202.h  sha3.pri
crypto/sig_bliss/: bliss_b.h  bliss_b_keys.c  bliss_b_params.c  bliss_b_params.h  bliss_b_signatures.c  bliss_b_utils.c  bliss_tables.c  bliss_tables.h  entropy.c  ntt_api.h  ntt_api_blzzd.c  sampler.c  sampler.h  sig_bliss.pri  tables.c
crypto/sig_picnic/: macos_specific_endian.h  (+7 more)
dap-sdk/: CMakeLists.txt  dap_common.c  dap_common.h
db/: CMakeLists.txt  db_core.c  db_core.h  db_http.c  db_http.h  db_http_file.c  db_http_file.h
enc/: CMakeLists.txt  enc_http.c  enc_http.h  enc_ks.c
enc_server/: CMakeLists.txt  dap_enc_http.c  dap_enc_http.h  dap_enc_ks.c  dap_enc_ks.h  enc_http.c  enc_ks.c  enc_ks.h
http/: CMakeLists.txt  dap_http.c  dap_http.h  dap_http_client.c  dap_http_client.h  dap_http_client_simple.c  dap_http_client_simple.h  dap_http_folder.c  dap_http_folder.h  dap_http_header.c  dap_http_header.h  dap_http_simple.c
http_server/: CMakeLists.txt  dap_http.c  dap_http.h  dap_http_folder.c  dap_http_folder.h  dap_http_simple.c  dap_http_simple.h  http_status_code.h
libdap-chain/: CMakeLists.txt  dap_chain_cell.h  dap_chain_ledger.c  dap_chain_pvt.c  dap_chain_vf.h
libdap-chain-net/: CMakeLists.txt  dap_chain_net.c  dap_chain_net_bugreport.h  dap_chain_net_remote.h  dap_chain_node.h  dap_chain_node_cli.c  dap_chain_node_cli_cmd_tx.h  dap_chain_node_client.c  dap_chain_node_remote.h
libdap-client/: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
libdap-cuttdb/: CMakeLists.txt
modules/: CMakeLists.txt  reorganize_net_modules.sh  update_all_cli_to_netcore.sh
session/: CMakeLists.txt  dap_stream_session.c  dap_stream_session.h  stream_session.c  stream_session.h
stream/: CMakeLists.txt  dap_stream.c  dap_stream.h  dap_stream_ctl.c  dap_stream_ctl.h  dap_stream_pkt.c  dap_stream_pkt.h  stream.c  stream.h  stream_ch.c  stream_ch.h  stream_ch_pkt.c  stream_ch_pkt.h  stream_ch_proc.c  stream_ch_proc.h  stream_ctl.c  stream_ctl.h  stream_pkt.c  stream_pkt.h
test/: 256_tests.cc  CMakeLists.txt  README.md  TestHeaders.hpp  dap_chain_cert_save_tests.c  dap_chain_cert_save_tests.h  dap_global_db_test.c  dap_sha3_tests.c  dap_traffic_track_test.c  dap_traffic_track_test.h  main.c  main.cpp
tests/: CMakeLists.txt  FIXTURES_API.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  README.md  dap_cellframe_sdk_init_test.c  dap_cellframe_sdk_init_test.h  main.c
udp_server/: CMakeLists.txt  dap_udp_client.c  dap_udp_client.h  dap_udp_server.c  dap_udp_server.h
(+3926 files in other folders)
